--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bootstrap-select": "^1.13.18",
     "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
+    "datalist-polyfill": "^1.24.4",
     "eslint": "^7.1.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-loader": "^4.0.2",
