--- a/.gitignore
+++ b/.gitignore
@@ -99,6 +99,7 @@ spec/examples.txt
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 /config/credentials.yml.enc
+/config/secrets.yml
 
 /public/packs
 /public/packs-test
